# arborhedron

./: .emoji  .gitignore  README.md  buildall.sh  main.py  policy_carbon.eqx  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tesseract-build.yml
docs/: technical_writeup.md
notebooks/: 01_surrogates.ipynb  02_rollout_baseline.ipynb  03A_gradient_optimization.ipynb  03B_wind_trunk_experiment.ipynb  03C_trunk_investigation.ipynb  04_neural_policy.ipynb  05_robust_evaluation.ipynb  06_geometric_skeleton.ipynb  07_climate_morphology.ipynb  08_carbon_resilience.ipynb
notebooks/.ipynb_checkpoints/: 03C_trunk_investigation-checkpoint.ipynb  03_gradient_optimization-checkpoint.ipynb  03_wind_trunk_experiment-checkpoint.ipynb  04_neural_policy-checkpoint.ipynb  05_robust_evaluation-checkpoint.ipynb  06B_stained_glass_upgrade-checkpoint.ipynb  06_geometric_skeleton-checkpoint.ipynb  07_climate_morphology-checkpoint.ipynb
sim/: __init__.py  carbon.py  config.py  dynamics.py  gradcheck.py  policies.py  resilience.py  rollout.py  skeleton.py  stained_glass.py  stress.py  surrogates.py  visualization.py
tesseracts/: README.md
tesseracts/growth_step/: tesseract_api.py  tesseract_config.yaml
tesseracts/growth_step/sim/: __init__.py
tesseracts/neural_policy/: tesseract_api.py  tesseract_config.yaml
tesseracts/seed_production/: tesseract_api.py  tesseract_config.yaml
tests/: __init__.py  test_ablations.py  test_carbon.py  test_dynamics.py  test_gradcheck.py  test_policies.py  test_resilience.py  test_rollout.py  test_stress.py  test_surrogates.py
trained_policies/: policy_mild.eqx  policy_multi.eqx
