[project]
name = "arborhedron"
version = "0.1.0"
description = "Differentiable morphogenetic neural cellular automata for growing tree-like structures under environmental stress"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipykernel>=6.28.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sim"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["sim", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "NPY",    # numpy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (needed for NeuralPolicy section)
    "NPY002", # legacy numpy random (visualization code uses np.random for simplicity)
    "B905",   # zip without strict (not needed for our use cases)
]

[tool.ruff.lint.per-file-ignores]
"sim/policies.py" = ["ARG001"]  # Unused args are intentional for API compatibility
"sim/visualization.py" = ["F841", "SIM102", "TC003", "ARG001", "B007"]  # Visualization code is more lenient
"sim/stained_glass.py" = ["SIM102", "TC003", "SIM108", "F841", "ARG001"]  # Visualization code is more lenient
"sim/skeleton.py" = ["SIM102"]  # Skeleton code uses nested ifs for clarity

[tool.ruff.lint.isort]
known-first-party = ["sim"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "equinox.*",
    "optax.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
